Merge module improvements from web-development-beckhoff fork (feature/module-improvement)
- Add builder pattern for service configuration; deprecate old constructor
- Add search request limiter and retry handling for HTTP 429 rate limiting
- Add persistent cache across service stop/start (CachePersistenceEntry)
- Improve cache update/cleanup logic (CacheUpdater, CentralCache)
- General cleanups and additional test coverage